makes delete button for individual comments invisible to non-authors, and creates middlware for backend to prevent non-authors from deleting comments using api clients

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -450,6 +450,18 @@ p.commentRating .far {
   font-size: 1.8rem;
 }
 
+.deleteCommentContainer {
+  color: rgb(255, 97, 97);
+  text-align: right;
+}
+
+.deleteCommentLink {
+  display: inline;
+  color: rgb(255, 97, 97);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
 /* ----LOGIN COMPONENT ---------- */
 
 .loginContainer,
@@ -517,7 +529,9 @@ p.commentRating .far {
 
 .loginPromptContainer {
   background: rgb(199, 199, 199);
+  border-radius: 2px;
   text-align: center;
+  padding: 1%;
 }
 
 .loginPromptHeader {
@@ -535,4 +549,16 @@ p.commentRating .far {
   text-decoration: none;
   color: inherit;
   font-size: 1.6rem;
+  border: 1px solid #000;
+  border-radius: 50px;
+  padding: 2% 5%;
+  margin-left: 6%;
+  margin-top: 2%;
+  transition: 300ms;
+}
+
+.loginPromptLink:hover {
+  background: #000;
+  color: #fff;
+  transition: 300ms;
 }
